# crud-api-rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/static/: index.html  index.js  styles.css
