[package]
name = "servidor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4" 
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"